<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F1F0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/rechercher"
        android:visibility="visible"
        android:focusable="false"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_today"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchview">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="25sp"
            android:text="@string/Aujourdhui"/>

        <TextView
            android:id="@+id/nb_task_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/icons8_calendar_2_96" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_all"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_today">

        <TextView
            android:id="@+id/textview_first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tout"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/nb_task_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/icons8_liste_100" />
    </androidx.cardview.widget.CardView>

    <com.dev.ogawin.swipemenulistview.SwipeMenuListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/searchview"
        android:layout_marginBottom="80dp"></com.dev.ogawin.swipemenulistview.SwipeMenuListView>



</androidx.constraintlayout.widget.ConstraintLayout>