<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F1F0"
    tools:context=".ActiviteCreerRappel"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/titre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:hint="Titre"/>

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="Notes"
                    android:textSize="20sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/cardView_content">

            <RelativeLayout
                android:id="@+id/cardview_time_Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="2dp"
                    android:textSize="20sp"
                    android:text="Date"/>
                <TextView
                    android:id="@+id/textview_selecteddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below= "@id/textview_date"
                    android:text="@string/notdefined"
                    android:textColor="#2986cc"
                    android:layout_marginLeft="10dp"
                    android:textSize="15sp"
                    />
                <CalendarView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below= "@id/textview_selecteddate"
                    android:hint="Titre"/>

                <TextView
                    android:id="@+id/textview_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below= "@id/date"
                    android:layout_marginLeft="10dp"
                    android:text="Heure"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/textview_selectedtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below= "@id/textview_time"
                    android:layout_marginLeft="10dp"
                    android:text="@string/notdefined"
                    android:textColor="#2986cc"
                    android:textSize="15sp"
                    />
                <TimePicker
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below= "@id/textview_selectedtime"
                    android:layout_marginLeft="10dp"
                    android:timePickerMode="spinner"
                    android:layout_marginBottom="2dp"
                    android:textSize="20sp"
                    />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_recurrence"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_recurrence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/repeter"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/recurrence"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/textView_recurrence"
                    android:drawSelectorOnTop="true"
                    android:layout_centerVertical="true"
                    android:entries="@array/recurrences_taches_sans_horaire"
                    android:textAlignment="viewEnd"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textview_fin_recurrence"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below= "@id/textView_recurrence"
                    android:layout_marginLeft="10dp"
                    android:text="Fin de la récurrence"
                    android:visibility="invisible"
                    android:textSize="20sp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_fin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_priorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/priorite"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"/>

                <Spinner
                    android:id="@+id/priorite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/textView_priorite"
                    android:drawSelectorOnTop="true"
                    android:layout_centerVertical="true"
                    android:entries="@array/priorites_taches"
                    android:textAlignment="viewEnd"
                    android:textSize="25sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_sousTache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView_sousTaches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/soustaches"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/annuler"
                android:textColor="#3498DB" />

            <Button
                android:id="@+id/proceedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#3498DB"
                android:text="@string/ok"
                android:clickable="false"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>